<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ScrollViewCreateEvent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TitleCreateEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tituloCreateEvent"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/titleCreateEvent_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/TitleCreateEvent"
            android:focusable="true"
            android:textColorHighlight="#ff7eff15"
            android:textColorHint="#000000" />

        <TextView
            android:id="@+id/DescriptionCreateEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/titleCreateEvent_edit_text"
            android:text="@string/descripcion"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/DescriptionCreateEvent_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/DescriptionCreateEvent"
            android:focusable="true"
            android:textColorHighlight="#ff7eff15"
            android:textColorHint="#000000" />

        <TextView
            android:id="@+id/PointsCreateEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/DescriptionCreateEvent_edit_text"
            android:text="@string/puntos"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/PointsCreateEvent_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/PointsCreateEvent"
            android:inputType="number"
            android:textColorHighlight="#ff7eff15"
            android:textColorHint="#000000" />

        <TextView
            android:id="@+id/DirectionCreateEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/PointsCreateEvent_edit_text"
            android:text="@string/direccion"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/DirectionCreateEvent_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/DirectionCreateEvent"
            android:textColorHighlight="#ff7eff15"
            android:textColorHint="#000000" />

        <TextView
            android:id="@+id/CompanyCreateEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/DirectionCreateEvent_edit_text"
            android:text="@string/empresa"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/CompanyCreateEvent_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/CompanyCreateEvent"
            android:textColorHighlight="#ff7eff15"
            android:textColorHint="#000000" />

        <TextView
            android:id="@+id/DateTextCreateEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/CompanyCreateEvent_edit_text"
            android:text="@string/fecha_evento"
            android:textSize="20sp" />


        <LinearLayout
            android:id="@+id/lineDateCreateEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/DateTextCreateEvent"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageButton
                android:id="@+id/DateCreateEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/fecha_del_evento_description"
                app:srcCompat="@android:drawable/ic_menu_my_calendar" />

            <EditText
                android:id="@+id/editTextDateEvent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.97"
                android:ems="10"
                android:inputType="date" />

        </LinearLayout>

        <TextView
            android:id="@+id/TimeTextCreateEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lineDateCreateEvent"
            android:text="@string/hora_evento"
            android:textSize="20sp" />


        <LinearLayout
            android:id="@+id/linearLayoutHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TimeTextCreateEvent">

            <EditText
                android:id="@+id/HourCreateEvent_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColorHighlight="#ff7eff15"
                android:textColorHint="#000000" />

            <TextView
                android:id="@+id/TwoPointsCreateEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TwoPoints"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/MinCreateEvent_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColorHighlight="#ff7eff15"
                android:textColorHint="#000000" />

        </LinearLayout>
        <TextView
            android:id="@+id/ImageCreateEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Imagen"
            android:layout_below="@+id/linearLayoutHour"
            android:textSize="20sp" />
<LinearLayout
    android:id="@+id/LinearLayoutImage"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/ImageCreateEvent">

    <ImageButton
        android:id="@+id/ImageCreateEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imagen_del_evento"
        app:srcCompat="@android:drawable/ic_menu_gallery"  />
    <ImageView
        android:id="@+id/ImageSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>
        <Button
            android:id="@+id/buttonSendCreateEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/LinearLayoutImage"
            android:text="@string/guardar" />
    </RelativeLayout>

</ScrollView>
