<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradientbackground"
                android:paddingTop="30dp"
                tools:ignore="MissingPrefix">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ImageButton
            android:id="@+id/back_arrow_add_account_to_main_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@null"
            app:srcCompat="@mipmap/ic_back_white"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/TitleLogIn"
            fontPath="fonts/Raleway-Light.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="83dp"
            android:elevation="1dp"
            android:fontFamily="monospace"
            android:text="GoGreen"
            android:textSize="30sp"/>

        <ImageView
            android:id="@+id/imageGoGreen"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@+id/TitleLogIn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="31dp"
            android:src="@mipmap/ic_launcher_round"/>

        <EditText
            android:id="@+id/username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageGoGreen"
            android:layout_marginTop="82dp"
            android:focusable="true"
            android:fontFamily="Roboto"
            android:hint="Nombre de usuario o email"
            android:textColor="@drawable/mainbuttontext"
            android:textColorHint="@drawable/mainbuttontext"
            android:theme="@style/campotextoregistro"/>

        <EditText
            android:id="@+id/password_user_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/username_edit_text"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/username_edit_text"
            android:ems="10"
            android:fontFamily="Roboto"
            android:hint="Contraseña"
            android:inputType="textPassword"
            android:textColor="@drawable/mainbuttontext"
            android:textColorHint="@drawable/mainbuttontext"
            android:theme="@style/campotextoregistro"/>


        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/buttonregisterloginshape"
            android:text="login"
            android:layout_alignParentBottom="true"
            android:textColor="@drawable/mainbuttontext"/>

    </RelativeLayout>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/relativeLayout2"
        android:layout_alignBottom="@+id/relativeLayout2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@null"
        android:text="Sign Up"
        android:textColor="@drawable/mainbuttontext"/>

</RelativeLayout>
