...
        <item
            android:id="@+id/list_events_shop_fragment"
            android:icon="@mipmap/ic_view_list_black_24dp"
            android:orderInCategory="12"
            android:title="@string/eventos" />
        <item
            android:id="@+id/create_event_fragment"
            android:icon="@drawable/ic_add_black_24dp"
            android:orderInCategory="13"
            android:title="@string/create_event" />
        <item
            android:id="@+id/list_ofertas_shop_fragment"
            android:icon="@mipmap/ic_view_list_black_24dp"
...
